2020-04-02  Per Arne Vollan  <pvollan@apple.com>

        Unreviewed build fix after r259396.

        * pal/spi/cocoa/LaunchServicesSPI.h:

2020-04-02  Per Arne Vollan  <pvollan@apple.com>

        Unreviewed build fix.

        * pal/spi/cocoa/CoreServicesSPI.h:
        * pal/spi/cocoa/LaunchServicesSPI.h:

2020-04-02  Per Arne Vollan  <pvollan@apple.com>

        [macOS] Remove redundant call to check in with Launch Services
        https://bugs.webkit.org/show_bug.cgi?id=209911

        Reviewed by Darin Adler.

        Move declarations to SPI header files.

        * PAL.xcodeproj/project.pbxproj:
        * pal/spi/cocoa/CoreServicesSPI.h: Added.
        * pal/spi/cocoa/LaunchServicesSPI.h:

2020-04-02  Eric Carlson  <eric.carlson@apple.com>

        [iOS] Allow WebKit to use camera in multi-tasking mode
        https://bugs.webkit.org/show_bug.cgi?id=209904

        Reviewed by Youenn Fablet.

        * pal/cocoa/AVFoundationSoftLink.h:
        * pal/cocoa/AVFoundationSoftLink.mm:

2020-04-01  Timothy Horton  <timothy_horton@apple.com>

        Fix the build.

        * pal/spi/ios/ManagedConfigurationSPI.h:

2020-04-01  Tim Horton  <timothy_horton@apple.com>

        Use ManagedConfiguration umbrella instead of including specific headers
        https://bugs.webkit.org/show_bug.cgi?id=209884
        <rdar://problem/59244126>

        Reviewed by Wenson Hsieh.

        * pal/spi/ios/ManagedConfigurationSPI.h:

2020-03-31  Eric Carlson  <eric.carlson@apple.com>

        [iPad] Use AVAudioSession to detect AirPlay route changes
        https://bugs.webkit.org/show_bug.cgi?id=209789
        <rdar://problem/58065279>

        Reviewed by Jer Noble.

        * pal/cocoa/AVFoundationSoftLink.h:
        * pal/cocoa/AVFoundationSoftLink.mm:
        * pal/spi/cocoa/AVFoundationSPI.h:

2020-03-30  Megan Gardner  <megan_gardner@apple.com>

        Update to new Data Detectors SPI
        https://bugs.webkit.org/show_bug.cgi?id=209788
        <rdar://problem/60690050>
