@@ -1,3 +1,9 @@
+2020-04-02  Per Arne Vollan  <pvollan@apple.com>
+
+        Unreviewed build fix after r259396.
+
+        * Shared/mac/AuxiliaryProcessMac.mm:
+
 2020-04-02  David Kilzer  <ddkilzer@apple.com>
 
         WebPageProxy attachment methods should return early if attachment element is not enabled
