@@ -6,6 +6,12 @@
 
 2020-04-02  Per Arne Vollan  <pvollan@apple.com>
 
+        Unreviewed build fix after r259396.
+
+        * pal/spi/cocoa/LaunchServicesSPI.h:
+
+2020-04-02  Per Arne Vollan  <pvollan@apple.com>
+
         Unreviewed build fix.
 
         * pal/spi/cocoa/CoreServicesSPI.h:
